06-kubernetes/05-exemplos/service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless # serviceName presente no statefulset.yml
spec:
  selector:
    app: mysql # matchLabels
  ports:
    - port: 3306
  clusterIP: None # Indica que o Service deve se comunicar com os Pods via DNS
