06-kubernetes/05-exemplos/service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
    - name: goserver-service
      port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 30001
